--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,6 @@
+@import url('./reset.css');
+@import url('/fonts/Gilroy/stylesheet.css');
+@import url('./common.css');
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./about.css');
@@ -7,3 +10,4 @@
 @import url('./reviews.css');
 @import url('./contact.css');
 @import url('./footer.css');
+@import url('./menu.css');
