--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,26 +1,71 @@
 .header {
-  display: flex;
-  justify-content: center;
+  border-bottom: 1px solid;
+  border-color: #0c0c0c1a;
 }
-
 .header .container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 203px;
+  padding: 26px 0;
 }
-
 .header-logo-link {
   font-size: 20px;
   color: inherit;
 }
-.header-navigation {
-}
 .header-nav-list {
   display: flex;
+  gap: 40px;
+  margin: 0;
 }
 .header-nav-item {
+  position: relative;
 }
 .header-nav-a {
   color: inherit;
+  font-size: 14px;
+  display: block;
+  height: 28px;
 }
+.header-nav-active::after {
+  position: absolute;
+  content: '';
+  width: 8px;
+  height: 8px;
+  bottom: 0;
+  left: 40%;
+  border-radius: 4px;
+  background-color: #3350e9;
+}
+.header-social {
+  display: flex;
+  gap: 10px;
+}
+
+.header-social-link {
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+  border-radius: 10px;
+  border: 1px solid;
+  border-color: #0c0c0c1a;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .header-icon {
+  fill: #0c0c0c;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-social-link:hover,
+.header-social-link:focus {
+  border-color: #3350e91a;
+}
+
+.header-social-link:hover .header-icon,
+.header-social-link:focus .header-icon {
+  fill: #3350e9;
 }
