--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,8 +1,70 @@
-<section>
-  <h2></h2>
-  <div>
-    <p></p>
-    <form></form>
+<section class="contact-section">
+  <div class="container">
+    <h2 class="contact-title">Contact Us</h2>
+    <div class="contact-container">
+      <div class="contact-content">
+        <p class="contact-form-text">
+          Please use the form below to contact us. Enter your name, email,
+          phone, and message and we'll get back to you shortly.
+        </p>
+        <form class="contact-form">
+          <input
+            class="contact-form-input"
+            type="text"
+            name="user-name"
+            placeholder="Name"
+            required
+          />
+          <input
+            class="contact-form-input"
+            type="email"
+            name="user-email"
+            placeholder="Email"
+            required
+          />
+          <input
+            class="contact-form-input"
+            type="tel"
+            name="user-phone"
+            placeholder="+380"
+            required
+          />
+          <textarea
+            class="contact-form-input"
+            name="user-comments"
+            placeholder="Comment"
+          ></textarea>
+        </form>
+        <button class="contact-btn" type="submit">Send</button>
+      </div>
+      <picture>
+        <source
+          srcset="
+            ../img/contact/desktop-contact-watch.jpg,
+            ../img/contact/desktop-contact-watch@2x.jpg 2x
+          "
+          media="(min-width:1280)"
+        />
+        <source
+          srcset="
+            ../img/contact/tablet-contact-watch.jpg,
+            ../img/contact/tablet-contact-watch@2x.jpg 2x
+          "
+          media="(min-width:768)"
+        />
+        <source
+          srcset="
+            ../img/contact/mobile-contact-watch.jpg,
+            ../img/contact/mobile-contact-watch@2x.jpg 2x
+          "
+          media="(max-width:767)"
+        />
+        <img
+          class="contact-photo"
+          src="../img/contact/mobile-contact-watch.jpg"
+          alt="Watch on the stone"
+        />
+      </picture>
+    </div>
   </div>
-  <img src="" alt="" />
 </section>
