--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,7 @@
 <section class="reviews
 " id="reviews">
 <div class="container">
-    <h2 class="">Reviews</h2>
+    <h2 class="reviews-title">Reviews</h2>
     <ul class="reviews-list">
         <li class="reviews-item" ><img class="photo-clients" srcset="./img/reviews/john-wax@2x.png 2x" src="./img/reviews/john-wax.png" alt="John Wax" width="56" height="56">
             <h3 class="reviews-list-fullname">John Wax</h3>
