--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,10 +1,44 @@
+.reviews-title {
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 0.91667;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+    margin-bottom: 40px;
+}
+.reviews-list {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+
+}
 .reviews-item {
+    width: calc((100% - 40px)/3);
     border-radius: 30px;
     padding: 32px 36px;
     background: #f3f3f3;
-  
 }
 .photo-clients {
     max-width: 56px;
     max-height: 56px;
+    margin: 0 auto 24px auto;
+}
+.reviews-list-fullname {
+
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: -0.02em;
+    line-height: 1.1;
+    color: #0c0c0c;
+    text-align: center;
+    margin-bottom: 8px;
+    
+}
+.reviews-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: rgba(12, 12, 12, 0.4);
 }
