--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -1,4 +1,7 @@
 .sale {
+  padding: 0px 20px;
+  width: 375px;
+  height: 1122px;
 }
 .containet {
 }
@@ -9,25 +12,49 @@
   line-height: 1;
   letter-spacing: -0.02em;
   color: #0c0c0c;
+  margin-bottom: 24px;
 }
 .sale-container-list-img {
+  margin-bottom: 20px;
 }
 .sale-list {
+  width: 335px;
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 5px;
 }
 .sale-list-item {
+  border: 1px solid rgba(12, 12, 12, 0.05);
+  border-radius: 16px;
+  width: 80px;
+  height: 80px;
+  background-color: #f3f3f3;
 }
 .sale-watch-img-mini {
+  padding: 13px 14px;
 }
 .sale-container-watch {
+  border: 1px solid rgba(12, 12, 12, 0.05);
+  border-radius: 30px;
+  width: 335px;
+  height: 385px;
+  background-color: #f3f3f3;
+  margin-bottom: 20px;
 }
 .sale-watch-img {
+  margin: 50px 50px;
 }
 .sale-container-about {
   padding: 48px 28px;
   border-radius: 30px;
-  width: 335px;
+  max-width: 335px;
   height: 561px;
   background-color: #3350e9;
+}
+.sale-container-title {
+  max-width: 279px;
 }
 .sale-title-about {
   font-weight: 600;
@@ -35,6 +62,7 @@
   line-height: 1.17;
   letter-spacing: -0.02em;
   color: #fbfbfb;
+  margin-bottom: 10px;
 }
 .sale-title-about-tag {
   font-weight: 400;
@@ -42,8 +70,19 @@
   line-height: 1.29;
   letter-spacing: -0.02em;
   color: rgba(251, 251, 251, 0.5);
+  margin-bottom: 20px;
+}
+.sale-btn-text {
+  display: flex;
+  gap: 9px;
+  align-items: center;
+  margin-bottom: 28px;
 }
 .sale-btn {
+  min-width: 68px;
+  border-radius: 8px;
+  background-color: rgba(251, 251, 251, 0.1);
+  padding: 8px 12px;
   font-weight: 600;
   font-size: 16px;
   line-height: 1.25;
@@ -59,6 +98,8 @@
   color: rgba(251, 251, 251, 0.5);
 }
 .sale-container-text {
+    max-width: 279px;
+    height: 161px;
 }
 .sale-title-about-text {
   font-weight: 500;
