--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -3,9 +3,8 @@
   width: 375px;
   height: 1122px;
 }
-.containet {
-}
 .sale-container {
+max-width: 335px;
 }
 .sale-title {
   font-size: 32px;
@@ -16,13 +15,13 @@
 }
 .sale-container-list-img {
   margin-bottom: 20px;
+  max-width: 335px;
+  height: 80px;
 }
 .sale-list {
-  width: 335px;
-  height: 80px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  flex-wrap: nowrap;
   gap: 5px;
 }
 .sale-list-item {
@@ -50,7 +49,6 @@
   padding: 48px 28px;
   border-radius: 30px;
   max-width: 335px;
-  height: 561px;
   background-color: #3350e9;
 }
 .sale-container-title {
@@ -111,10 +109,20 @@
 .sale-container-btn {
 }
 .sale-container-btn-option {
+    max-width: 279px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 8px;
 }
 .sale-btn-type {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
   color: #fbfbfb;
+  border: 1px solid rgba(251, 251, 251, 0.2);
+border-radius: 8px;
+padding: 8px 12px;
+height: 32px;
+background-color: transparent;
 }
