Prepare ways to photos

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -40,28 +40,28 @@
       <picture>
         <source
           srcset="
-            ../img/contact/desktop-contact-watch.jpg,
-            ../img/contact/desktop-contact-watch@2x.jpg 2x
+            ./img/contact/desktop-contact-watch.jpg,
+            ./img/contact/desktop-contact-watch@2x.jpg 2x
           "
           media="(min-width:1280)"
         />
         <source
           srcset="
-            ../img/contact/tablet-contact-watch.jpg,
-            ../img/contact/tablet-contact-watch@2x.jpg 2x
+            ./img/contact/tablet-contact-watch.jpg,
+            ./img/contact/tablet-contact-watch@2x.jpg 2x
           "
           media="(min-width:768)"
         />
         <source
           srcset="
-            ../img/contact/mobile-contact-watch.jpg,
-            ../img/contact/mobile-contact-watch@2x.jpg 2x
+            ./img/contact/mobile-contact-watch.jpg,
+            ./img/contact/mobile-contact-watch@2x.jpg 2x
           "
           media="(max-width:767)"
         />
         <img
           class="contact-photo"
-          src="../img/contact/mobile-contact-watch.jpg"
+          src="./img/contact/mobile-contact-watch.jpg"
           alt="Watch on the stone"
         />
       </picture>
