add sale section mobile

--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -56,14 +56,16 @@
       />
     </div>
     <div class="sale-container-about">
-        <div class="sale-container-title">
-      <h3 class="sale-title-about">MARQ® Commander (Gen 2) - Carbon Edition</h3>
-      <p class="sale-title-about-tag">Product tag: 706587</p>
-      <div class="sale-btn-text">
-      <button class="sale-btn" type="button">€1500</button>
-      <p class="sale-title-about-price">€3000</p>
-    </div>
-    </div>
+      <div class="sale-container-title">
+        <h3 class="sale-title-about">
+          MARQ® Commander (Gen 2) - Carbon Edition
+        </h3>
+        <p class="sale-title-about-tag">Product tag: 706587</p>
+        <div class="sale-btn-text">
+          <button class="sale-btn" type="button">€1500</button>
+          <p class="sale-title-about-price">€3000</p>
+        </div>
+      </div>
       <div class="sale-container-text">
         <p class="sale-title-about-text">
           The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch
