--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,5 +1,5 @@
 <section class="sale">
-  <div class="containet sale-container">
+  <div class="container sale-container">
     <h2 class="sale-title">Sale</h2>
     <div class="sale-container-list-img">
       <ul class="sale-list">
@@ -16,7 +16,7 @@
         <li class="sale-list-item">
           <img
             class="sale-watch-img-mini"
-            srcset="./img/sale/tablet-watch-frontv@2x.png 2x"
+            srcset="./img/sale/mobile-watch-frontv@2x.png 2x"
             src="./img/sale/mobile-watch-frontv.png"
             width="54"
             height="54"
