--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -2,62 +2,60 @@
   <div class="container">
     <h2 class="contact-title">Contact Us</h2>
     <div class="contact-container">
-      <div class="contact-content">
+      <form class="contact-form">
         <p class="contact-form-text">
           Please use the form below to contact us. Enter your name, email,
           phone, and message and we'll get back to you shortly.
         </p>
-        <form class="contact-form">
-          <input
-            class="contact-form-input"
-            type="text"
-            name="user-name"
-            placeholder="Name"
-            required
-          />
-          <input
-            class="contact-form-input"
-            type="email"
-            name="user-email"
-            placeholder="Email"
-            required
-          />
-          <input
-            class="contact-form-input"
-            type="tel"
-            name="user-phone"
-            placeholder="+380"
-            required
-          />
-          <textarea
-            class="contact-form-input"
-            name="user-comments"
-            placeholder="Comment"
-          ></textarea>
-        </form>
+        <input
+          class="contact-form-input"
+          type="text"
+          name="user-name"
+          placeholder="Name"
+          required
+        />
+        <input
+          class="contact-form-input"
+          type="email"
+          name="user-email"
+          placeholder="Email"
+          required
+        />
+        <input
+          class="contact-form-input"
+          type="tel"
+          name="user-phone"
+          placeholder="+380"
+          required
+        />
+        <textarea
+          class="contact-form-input contact-form-comment"
+          name="user-comments"
+          placeholder="Comment"
+        ></textarea>
         <button class="contact-btn" type="submit">Send</button>
-      </div>
+      </form>
       <picture>
         <source
           srcset="
-            ./img/contact/desktop-contact-watch.jpg,
+            ./img/contact/desktop-contact-watch.jpg    1x,
             ./img/contact/desktop-contact-watch@2x.jpg 2x
           "
-          media="(min-width:1280)"
+          media="(min-width: 1280px)"
         />
         <source
           srcset="
-            ./img/contact/tablet-contact-watch.jpg,
+            ./img/contact/tablet-contact-watch.jpg    1x,
             ./img/contact/tablet-contact-watch@2x.jpg 2x
           "
-          media="(min-width:768)"
+          media="(min-width: 768px)"
         />
         <source
           srcset="
-            ./img/contact/mobile-contact-watch.jpg,
+            ./img/contact/mobile-contact-watch.jpg    1x,
             ./img/contact/mobile-contact-watch@2x.jpg 2x
           "
-          media="(max-width:767)"
+          media="(max-width: 767px)"
         />
         <img
           class="contact-photo"
