--- a/src/css/common.css
+++ b/src/css/common.css
@@ -19,18 +19,18 @@
   }
 }
 
-.section {
+section {
   margin-bottom: 60px;
 }
 
 @media (min-width: 768px) {
-  .section {
+  section {
     margin-bottom: 80px;
   }
 }
 
 @media (min-width: 1280px) {
-  .section {
+  section {
     margin-bottom: 100px;
   }
 }
