--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -59,3 +59,11 @@
     </div>
   </div>
 </header>
+<script>
+  function openNav() {
+    document.getElementById('backdrop').classList.add('is-open');
+  }
+  function closeNav() {
+    document.getElementById('backdrop').classList.remove('is-open');
+  }
+</script>
