--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -6,7 +6,7 @@
     color: #0c0c0c;
     margin-bottom: 24px;
 }
-@media screeen and (min-width: 768px) {
+@media (min-width: 768px) {
     .reviews-title {
     font-size: 48px;
     line-height: 0.916;
@@ -14,16 +14,33 @@
 }
 }
 .reviews-list {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
+    margin: 0;
+}
 
+.container-reviews {
+    display: flex;
+    flex-direction: column;
 }
 .reviews-item {
-    width: calc((100% - 40px)/3);
     border-radius: 30px;
     padding: 32px 36px;
     background: #f3f3f3;
+}
+@media (min-width: 768px) {
+.reviews-item {
+    width: calc((100% - 16px)/2);
+    border-radius: 30px;
+    padding: 32px 36px;
+    background: #f3f3f3;
+}
+}
+@media (min-width: 1280px) {
+    .reviews-item {
+        width: calc((100% - 40px)/3);
+        border-radius: 30px;
+        padding: 32px 36px;
+        background: #f3f3f3;
+    }
 }
 .photo-clients {
     max-width: 56px;
@@ -49,7 +66,7 @@
     text-align: center;
     color: rgba(12, 12, 12, 0.4);
 }
-@media screeen and (min-width: 768px) {
+@media (min-width: 768px) and (min-width: 1280px) {
 .reviews-text {
     font-size: 16px;
     line-height: 1.25;
