--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,9 +1,22 @@
 body {
-  margin: 0;
-  font-size: 16px;
-  font-weight: 500;
   font-family: 'Gilroy', 'Arial', sans-serif;
   color: #0c0c0c;
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  outline: transparent;
+}
+
+img {
+  display: block;
+  height: auto;
+}
+
+input {
+  outline: transparent;
 }
 
 a {
