--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -20,7 +20,8 @@
 .catalog-item-img {
 border: 1px solid rgba(12, 12, 12, 0.05);
 border-radius: 30px;
-width: 279px;
+width: 335px;
 height: 100%;
 background: #f3f3f3;
+margin: 50px auto;
     }
