--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -14,7 +14,10 @@
 }
 }
 .reviews-list {
-    margin: 0;
+   display: flex;
+   flex-direction: row;
+   gap: 20px;
+   margin: 0;
 }
 
 .container-reviews {
@@ -22,9 +25,13 @@
     flex-direction: column;
 }
 .reviews-item {
+    width: 100%;
     border-radius: 30px;
     padding: 32px 36px;
     background: #f3f3f3;
+}
+.reviews-item:not(:first-child){
+    display: none;
 }
 @media (min-width: 768px) {
 .reviews-item {
@@ -32,6 +39,16 @@
     border-radius: 30px;
     padding: 32px 36px;
     background: #f3f3f3;
+    
+}
+.reviews-item:not(:first-child) {
+    display: block;
+}
+.reviews-item:last-child {
+    display: none;
+}
+.reviews-list {
+    gap: 16px;
 }
 }
 @media (min-width: 1280px) {
@@ -40,6 +57,9 @@
         border-radius: 30px;
         padding: 32px 36px;
         background: #f3f3f3;
+    }
+    .reviews-item:last-child {
+       display: block;
     }
 }
 .photo-clients {
