--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,30 +4,24 @@ ul {
 }
 
 a {
-  text-decoration: none;
   color: inherit;
 }
 
-.container {
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.footer {
+.footer-container {
+  background: #0c0c0c;
   display: flex;
   max-width: 335px;
-  padding: 40px 28px 28px 28px;
-  align-items: flex-start;
-  gap: 10px;
   border-radius: 30px;
-  background: #0c0c0c;
+  padding: 40px 28px 28px 28px;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .footer-socials-blok {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  margin-bottom: 40px;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
 .footer-logo {
@@ -59,6 +53,9 @@ a {
 }
 
 .footer-social-icon {
+  width: 18px;
+  height: 18px;
+  flex-shrink: 0;
   fill: #fbfbfb;
 }
 
@@ -72,6 +69,7 @@ a {
   flex-shrink: 0;
   border-radius: 16px;
   border: 1px solid rgba(251, 251, 251, 0.2);
+  margin-bottom: 40px;
 }
 
 .footer-tel-text {
@@ -108,8 +106,8 @@ a {
 .footer-anchors-address {
   display: flex;
   align-items: baseline;
-  justify-content: space-between;
   margin-bottom: 24px;
+  gap: 49px;
 }
 
 .footer-anchors-list {
@@ -121,15 +119,9 @@ a {
   font-family: 'Gilroy', sans-serif;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.33333;
+  line-height: 1.3;
   text-align: center;
   color: #fbfbfb;
-}
-
-.footer-border {
-  border: 1px solid #fbfbfb1a;
-  max-width: 279px;
-  margin-bottom: 24px;
 }
 
 .footer-address {
@@ -137,8 +129,14 @@ a {
   font-family: 'Gilroy', sans-serif;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.33333;
+  line-height: 1.33;
   color: #fbfbfb;
+}
+
+.footer-border {
+  border: 1px solid #fbfbfb1a;
+  max-width: 279px;
+  margin-bottom: 24px;
 }
 
 .footer-text-privacy {
@@ -156,4 +154,140 @@ a {
 .footer-service {
   display: flex;
   gap: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    padding: 40px 40px 28px 40px;
+    max-width: 768px;
+    position: relative;
+  }
+
+  .footer-socials-blok {
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 20px;
+    margin-bottom: 86px;
+  }
+
+  .footer-logo {
+    font-size: 20px;
+    letter-spacing: -0.02em;
+  }
+
+  .footer-social-list-link {
+    width: 36px;
+    height: 36px;
+    gap: 10px;
+  }
+
+  .footer-social-icon {
+    width: 20px;
+    height: 20px;
+  }
+
+  .footer-tel {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    width: 160px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+
+  .footer-tel-text {
+    padding: 15px;
+    font-size: 14px;
+    font-style: normal;
+  }
+
+  .footer-tagline {
+    max-width: 524px;
+    font-size: 28px;
+    line-height: 1.14;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 100px;
+  }
+
+  .footer-anchors-address {
+    display: flex;
+    align-items: flex-start;
+    gap: 62px;
+    margin-bottom: 28px;
+  }
+
+  .footer-anchors-list {
+    max-width: 400px;
+    display: flex;
+    flex-wrap: nowrap;
+    height: 18px;
+    align-items: flex-end;
+    gap: 19px;
+    font-size: 14px;
+    font-style: normal;
+  }
+
+  .footer-address {
+    max-width: 162px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
+
+  .footer-border {
+    max-width: 624px;
+    margin-bottom: 28px;
+  }
+
+  .footer-text-privacy {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 159px;
+    font-size: 14px;
+    line-height: 1.28;
+    opacity: 0.9;
+  }
+
+  .footer-service {
+    width: 204px;
+    height: 18px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer-container {
+    max-width: 1280px;
+  }
+
+  .footer-socials-blok {
+    margin-bottom: 142px;
+  }
+
+  .footer-tagline {
+    position: absolute;
+    top: 40px;
+    left: 306px;
+    font-weight: 600;
+    margin: 0;
+  }
+
+  .footer-anchors-address {
+    gap: 405px;
+  }
+
+  .footer-anchors-list {
+    max-width: 505px;
+    font-size: 14px;
+    line-height: 1.28;
+    gap: 40px;
+  }
+
+  .footer-border {
+    max-width: 1136px;
+  }
+
+  .footer-text-privacy {
+    gap: 605px;
+  }
 }
