--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,3 +1,8 @@
+.catalog {
+    /*max-width: 375px;
+    padding: 0px 20px;*/
+    
+}
 .catalog-btitle {
     font-weight: 600;
     font-size: 32px;
@@ -11,6 +16,7 @@
     gap: 20px;
     max-width: 335px;
     height: 100%;
+    margin-bottom: 0;
 }
 
 .catalog-item{
@@ -18,10 +24,31 @@
     }
 
 .catalog-item-img {
-border: 1px solid rgba(12, 12, 12, 0.05);
-border-radius: 30px;
-width: 335px;
-height: 100%;
-background: #f3f3f3;
-margin: 50px auto;
+    border: 1px solid rgba(12, 12, 12, 0.05);
+    border-radius: 30px;
+    
+    height: 100%;
+    background: #f3f3f3;
+
     }
+.catalog-photo {
+    padding: 24px 28px;
+}
+.catalog-btn {
+    width: 160px;
+    height: 48px;
+    border-radius: 16px;
+    margin-top: 40px;
+    background: #3350e9;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    text-align: center;
+    color: #fbfbfb;
+    display: block;
+    margin: 40px auto 0 auto; 
+           
+}
+.catalog-item-img-wrap {
+    display: none;
+}
