--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -2,22 +2,22 @@
    <div class="container catalog">
     <h2 class="catalog-btitle">Catalog</h2>
     <ul class="catalog-title">
-        <li class="catalog-item">
-            <div class="catalog-item-img" >
+        <li class="catalog-item-img">
+            <div>
             <picture>                
                 <source
                   srcset="
                     ../img/catalog/tablet1-garmin-fenix.png 1x,
                     ../img/catalog/tablet1-garmin-fenix@2x.png 2x
                   "
-                  media="(min-width:768px)"
+                  media="(min-width:1px)"
                 />
                 <source
                   srcset="
                   ../img/catalog/mob1-garmin-fenix.png 1x,
                   ../img/catalog/mob1-garmin-fenix@2x.png 2x
                   "
-                  media="(max-width:767px)"
+                  media="(min-width:768px)"
                 />
                 <img
                   src="../img/catalog/mob1-garmin-fenix.png"
@@ -27,21 +27,22 @@
               </picture>
             </div>
         </li>
-        <li class="catalog-item">
+        <li class="catalog-item-img">
+          <div>
             <picture>                
                 <source
                   srcset="
                     ../img/catalog/tablet2-garmin-marq.png 1x,
                     ../img/catalog/tablet2-garmin-marq@2x.png 2x
                   "
-                  media="(min-width:321px)"
+                  media="(min-width:1px)"
                 />
                 <source
                   srcset="
                   ../img/catalog/mob2-garmin-marq.png 1x,
                   ../img/catalog/mob2-garmin-marq@2x.png 2x
                   "
-                  media="(max-width:320px)"
+                  media="(min-width:768px)"
                 />
                 <img
                   src="../img/catalog/mob2-garmin-marq.png"
@@ -49,23 +50,24 @@
                   class="catalog-photo"
                 />
               </picture>
-
+            </div>
         </li>
-        <li class="catalog-item">
+        <li class="catalog-item-img">
+          <div>
             <picture>                
                 <source
                   srcset="
                     ../img/catalog/tablet3-garmin-descent.png 1x,
                     ../img/catalog/tablet3-garmin-descent@2x.png 2x
                   "
-                  media="(min-width:321px)"
+                  media="(min-width:1px)"
                 />
                 <source
                   srcset="
                   ../img/catalog/mob3-garmin-descent.png 1x,
                   ../img/catalog/mob3-garmin-descent@2x.png 2x
                   "
-                  media="(max-width:320px)"
+                  media="(min-width:768px)"
                 />
                 <img
                   src="../img/catalog/mob3-garmin-descent.png"
@@ -73,23 +75,25 @@
                   class="catalog-photo"
                 />
               </picture>
+            </div>
 
         </li>
-        <li class="catalog-item">
+        <li class="catalog-item-img">
+          <div>
             <picture>                
                 <source
                   srcset="
                     ../img/catalog/tablet4-garmin-delta@2x.png 1x,
                     ../img/catalog/tablet4-garmin-delta@2x.png 2x
                   "
-                  media="(min-width:321px)"
+                  media="(min-width:1px)"
                 />
                 <source
                   srcset="
                   ../img/catalog/mob4-garmin-delta.png 1x,
                   ../img/catalog/mob4-garmin-delta@2x.png 2x
                   "
-                  media="(max-width:320px)"
+                  media="(min-width:768px)"
                 />
                 <img
                   src="../img/catalog/mob4-garmin-delta.png"
@@ -97,22 +101,24 @@
                   class="catalog-photo"
                 />
               </picture>
+            </div>
         </li>
-        <li class="catalog-item">
+        <li class="catalog-item-img catalog-item-img-wrap">
+            <div>
             <picture>                
                 <source
                   srcset="
                     ../img/catalog/tablet5-garmin-6pro.png 1x,
                     ../img/catalog/tablet5-garmin-6pro@2x.png 2x
                   "
-                  media="(min-width:321px)"
+                  media="(min-width:1px)"
                 />
                 <source
                   srcset="
                   ../img/catalog/mob5-garmin-6pro.png 1x,
                   ../img/catalog/mob5-garmin-6pro@2x.png 2x
                   "
-                  media="(max-width:320px)"
+                  media="(min-width:768px)"
                 />
                 <img
                   src="../img/catalog/mob5-garmin-6pro.png"
@@ -120,22 +126,24 @@
                   class="catalog-photo"
                 />
               </picture>
+            </div>
         </li>
-        <li class="catalog-item">
-            picture>                
+        <li class="catalog-item-img catalog-item-img-wrap">
+          <div>
+            <picture>                
                 <source
                   srcset="
                     ../img/catalog/tablet6-tube-watch.png 1x,
                     ../img/catalog/tablet6-tube-watch@2x.png 2x
                   "
-                  media="(min-width:321px)"
+                  media="(min-width:1px)"
                 />
                 <source
                   srcset="
                   ../img/catalog/mob6-tube-watch.png 1x,
                   ../img/catalog/mob6-tube-watch@2x.png 2x
                   "
-                  media="(max-width:320px)"
+                  media="(min-width:768px)"
                 />
                 <img
                   src="../img/catalog/mob6-tube-watch.png"
@@ -143,8 +151,12 @@
                   class="catalog-photo"
                 />
               </picture>
+            </div>
         </li>
     </ul>
+    
+    <button class="catalog-btn" type="button">Show more</button>
+  
    </div>
 
 
