--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -154,9 +154,9 @@
             </div>
         </li>
     </ul>
-    
+    <div>
     <button class="catalog-btn" type="button">Show more</button>
-  
+    </div>
    </div>
 
 
