--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,70 +1,67 @@
 .hero-section {
-    padding: 60px 20px 0px 20px;
-    width: 375px;
-    height: 732px;
+    margin-top: 80px;
 }
-@media screen and (min-width: 768px) {
-    .hero-section {
-    padding: 80px 32px 0px 32px;
-    width: 768px;
-    height: 900px;
 
+.hero-container {
+    padding: 0px 20px;
+}
+
+@media screen and (min-width: 768px) {
+    .hero-container {
+    padding: 0px 32px;        
     }
 }
 
 @media screen and (min-width: 1280px) {
-    .hero-section {
-    padding: 80px 65px 0px 65px;
-    width: 1280px;
-    height: 889px;
+    .hero-container {
+    padding: 0px 65px;    
     }
 }
-.hero-contenier-text {
-width: 335px;
-height: 206px;
-}
-@media screen and (min-width: 768px) {
-    .hero-contenier-text {
-        width: 557px;
-        height: 260px;
 
+.hero-container-text {
+    width: 335px;    
+}
+
+@media screen and (min-width: 768px) {
+    .hero-container-text {
+        width: 557px;     
     }
 }
 
 @media screen and (min-width: 1280px) {
-    .hero-contenier-text {
+    .hero-container-text {
     width: 597px;
     height: 269px;
-
     }
 }
+
 .hero-title {
     font-family: "Gilroy", sans-serif;
     font-weight: 600;
     font-size: 40px;
     line-height: 0.95;
     letter-spacing: -0.02em;
-    color: #0c0c0c;
-    
+    color: #0c0c0c;    
 }
+
 @media screen and (min-width: 768px) {
-    .hero-title {
+    .hero-title {        
         font-size: 70px;
-        line-height: 0.85714;
-        
+        line-height: 0.85714;        
     }
 }
 
 @media screen and (min-width: 1280px) {
-    .hero-title {
+    .hero-title {  
     font-size: 72px;
-    line-height: 0.875;
-    
+    line-height: 0.875;    
     }
 }
+
 .hero-span {
     color: #3350e9;
 }
+
 .hero-text {
     font-family: "Gilroy", sans-serif;
     font-weight: 500;
@@ -73,20 +70,24 @@ height: 206px;
     letter-spacing: -0.02em;
     color: rgba(12, 12, 12, 0.7);
     margin-top: 20px;
+    
 }
+
 @media screen and (min-width: 768px) {
     .hero-text {
-            font-size: 16px;
-            line-height: 1.25;
+        font-size: 16px;
+        line-height: 1.25;
+        width: 480px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .hero-text {
-            font-size: 16px;
-            line-height: 1.25;
-               }
+        font-size: 16px;
+        line-height: 1.25;
+         }
 }
+
 .hero-scroll {
     font-family: "Gilroy", sans-serif;
     font-weight: 500;
@@ -98,41 +99,84 @@ height: 206px;
     color: #0c0c0c;
     padding-top: 26px;
 }
+
 @media screen and (min-width: 768px) {
     .hero-scroll { 
         font-size: 20px;
-        line-height: 1;        
+        line-height: 1; 
+        display: flex;
+        padding-top: 180px;
+        justify-content: right;
     }
 }
+
 .hero-scroll:hover,
 .hero-scroll:focus {
     color: #3350e9;
     }
+
 .hero-ellipse {
     display: flex;
-    gap: 155px;
+    justify-content: space-between;
     margin-top: 28px;
       
 }
+
+.hero-container-tablet {
+    display: block;
+    gap: 11px;
+}
+
 @media screen and (min-width: 768px) {
-    .hero-contenier-tablet {
+    .hero-container-tablet {
         display: flex;
     }
     .hero-ellipse {
         display: block;
-        margin-top: 0;
-        
+        margin-top: 0;           
+
     }
-    .hero-contenier-text {
-        margin-right: 11px;
-    }
-    
+  
 }
+
+@media screen and (min-width: 1280px) {
+    .hero-ellipse {        
+        padding-left: 407px;
+
+    }       
+}
+
 .hero-picture {
+    align-items: center;
     margin-top: 28px;
-}
-.hero-picture-info {
-    border-radius: 30px;
-    background-color: rgba(12, 12, 12, 0.2);
     
+}
+
+@media screen and (min-width: 768px) {
+    .hero-picture {
+        margin-top: 40px;
+    }
+
+}
+
+.hero-picture-info {   
+    border-radius: 30px;
+    width: 335px;
+    color: rgba(12, 12, 12, 0.2);
+}
+
+@media screen and (min-width: 768px) {
+    .hero-picture-info {
+        border-radius: 50px;
+        width: 704px;
+        height: 520px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .hero-picture-info {
+        border-radius: 50px;
+        width: 1150px;
+        height: 500px;
+    }
 }
