--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,8 +1,7 @@
 <section class="hero-section">
-  
-    <div class="contenier hero-contanier">
-        <div class="hero-contenier-tablet">
-      <div class="hero-contenier-text">
+      <div class="container hero-container">
+        <div class="hero-container-tablet">
+          <div class="hero-container-text">
         <h1 class="hero-title">
           Welcome to our <span class="hero-span">collection</span> of premium
           watches
@@ -14,16 +13,37 @@
         </p>
      </div>
       <div class="hero-ellipse">
-                
-          <img
+           <picture class="hero-ellipse-info">
+        <source
+          srcset="
+            ./img/hero/desktop-hero/imagedesktop@1x.png 1x,
+            ./img/hero/desktop-hero/imagedesktop@2x.png 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/hero/tablet-hero/imagetablet@1x.png 1x,
+            ./img/hero/tablet-hero/imagetablet@2x.png 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            ./img/hero/mobile-hero/imagemobile@1x.png 1x,
+            ./img/hero/mobile-hero/imagemobile@2x.png 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
             class="hero-ellipse-img"
-            src="./img/hero/desktop-hero/image@1x.png"
+            src="./img/hero/desktop-hero/imagedesktop@1x.png"
             alt="Ellipse"
           />
-       
+      </picture>    
         
         <a class="hero-scroll" href="#">Scroll down</a>
-      
+   
       </div>
     </div>
     <div class="hero-picture">
@@ -33,7 +53,7 @@
             ./img/hero/desktop-hero/desktop-hero@1x.jpg 1x,
             ./img/hero/desktop-hero/desktop-hero@2x.jpg 2x
           "
-          media="(min-width: 1158px)"
+          media="(min-width: 1280px)"
         />
         <source
           srcset="
@@ -58,6 +78,4 @@
     </div>
     </div>
     </div>
- 
-
-</section>
+ </section>
