--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -129,5 +129,11 @@
   }
 }
 .menu-icon {
+  fill: #cbcbcb;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-social-link:hover .menu-icon,
+.menu-social-link:focus .menu-icon {
   fill: #fbfbfb;
 }
