--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,6 +1,3 @@
-img {
-  width: 100%;
-}
 .contact-container {
   display: flex;
   flex-direction: column;
@@ -86,6 +83,9 @@ img {
   width: 100%;
   height: auto;
   border-radius: 30px;
+}
+.contact-photo img {
+  width: 100%;
 }
 @media (min-width: 768px) {
   .contact-container {
