--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -5,6 +5,7 @@
 }
 
 @media screen and (min-width: 768px) {
+    
     .hero-container {
     padding: 0px 32px;
     padding-top: 172px;        
@@ -133,7 +134,7 @@
     }
     .hero-ellipse {
         display: block;
-        margin-top: 0;           
+        margin-top: 0;         
 
     }
   
@@ -162,10 +163,8 @@
 .hero-picture-info {   
     border-radius: 30px;
     width: 335px;
-    background-image: linear-gradient(to bottom,
-                rgba(12, 12, 12, 0.2),
-                rgba(12, 12, 12, 0.2)),
-            url(../img/hero/mobile-hero/mobile-hero@2x);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+        
 }
 
 @media screen and (min-width: 768px) {
