--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -19,22 +19,6 @@
     }
 }
 
-.hero-container-text {
-    width: 335px;    
-}
-
-@media screen and (min-width: 768px) {
-    .hero-container-text {
-        width: 557px;     
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .hero-container-text {
-    width: 597px;
-    height: 269px;
-    }
-}
 
 .hero-title {
     font-family: "Gilroy", sans-serif;
@@ -99,6 +83,7 @@
     text-decoration-skip-ink: none;
     color: #0c0c0c;
     padding-top: 26px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
@@ -149,7 +134,8 @@
 
 .hero-picture {
     align-items: center;
-    margin-top: 28px;
+    margin-top: 28px; 
+    
     
 }
 
@@ -162,23 +148,20 @@
 
 .hero-picture-info {   
     border-radius: 30px;
-    width: 335px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    width: 100%;
         
 }
 
 @media screen and (min-width: 768px) {
     .hero-picture-info {
         border-radius: 50px;
-        width: 704px;
-        height: 520px;
+       
     }
 }
 
 @media screen and (min-width: 1280px) {
     .hero-picture-info {
         border-radius: 50px;
-        width: 1150px;
-        height: 500px;
+        
     }
 }
