--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,8 @@
-<footer class="footer">
-  <div class="container">
+<footer>
+  <div class="container container-footer-size">
     <div class="footer-container">
       <div class="footer-socials-blok">
-        <a href="/src/index.html" class="footer-logo">watchcharm</a>
+        <a href="index.html" class="footer-logo">watchcharm</a>
         <ul class="footer-social">
           <li class="footer-social-list">
             <a
@@ -42,7 +42,7 @@
           </li>
         </ul>
       </div>
-      <div class="footer-tel" aria-label="tel">
+      <div class="footer-tel">
         <a href="tel:+380684439426" class="footer-tel-text"
           >+380 (68) 443-94-26</a
         >
@@ -55,22 +55,22 @@
       <div class="footer-anchors-address">
         <ul class="footer-anchors-list">
           <li>
-            <a href="">Home</a>
+            <a href="#home">Home</a>
           </li>
           <li>
-            <a href="">About Us</a>
+            <a href="#about">About Us</a>
           </li>
           <li>
-            <a href="">Catalog</a>
+            <a href="#catalog">Catalog</a>
           </li>
           <li>
-            <a href="">Sale</a>
+            <a href="#sale">Sale</a>
           </li>
           <li>
-            <a href="">Reviews</a>
+            <a href="#reviews">Reviews</a>
           </li>
           <li>
-            <a href="">Contact Us</a>
+            <a href="#contact">Contact Us</a>
           </li>
         </ul>
 
@@ -78,7 +78,6 @@
           1678 S. Pioneer Road Salt Lake City UT 84104
         </address>
       </div>
-      <p class="footer-border"></p>
       <div class="footer-text-privacy">
         <p class="footer-text">©2023 The Watch Spot. All rights reserved.</p>
         <div class="footer-service">
