готова секция с избытком
Похоже лишнее сделала:
Ховер на кнопку («в бреду» мне померещилось? Сейчас не нашла.
И box-shadow на ліжки сделала.
В мобильной версии вроде как есть?!

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -3,162 +3,167 @@
     <h2 class="catalog-btitle">Catalog</h2>
     <ul class="catalog-title">
         <li class="catalog-item-img">
-            <div>
-            <picture>                
+            <div class="catalog-item-img-block">
+              <picture>                
                 <source
                   srcset="
-                    ../img/catalog/tablet1-garmin-fenix.png 1x,
-                    ../img/catalog/tablet1-garmin-fenix@2x.png 2x
+                    ./img/catalog/tablet1-garmin-fenix.png 1x,
+                    ./img/catalog/tablet1-garmin-fenix@2x.png 2x
                   "
-                  media="(min-width:1px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
-                  ../img/catalog/mob1-garmin-fenix.png 1x,
-                  ../img/catalog/mob1-garmin-fenix@2x.png 2x
+                  ./img/catalog/mob1-garmin-fenix.png 1x,
+                  ./img/catalog/mob1-garmin-fenix@2x.png 2x
                   "
-                  media="(min-width:768px)"
+                  media="(max-width: 767px)"
                 />
                 <img
-                  src="../img/catalog/mob1-garmin-fenix.png"
+                  src="./img/catalog/mob1-garmin-fenix.png"
                   alt="Garmin fenix"
                   class="catalog-photo"
                 />
               </picture>
+              <div class="catalog-item-name-price">
+              <p class="catalog-item-name">Garmin Fenix 7X Pro Sapphire Solar</p>
+              <p class="catalog-item-price">€500</p>
+              </div>
             </div>
         </li>
         <li class="catalog-item-img">
-          <div>
+          <div class="catalog-item-img-block">
             <picture>                
                 <source
                   srcset="
-                    ../img/catalog/tablet2-garmin-marq.png 1x,
-                    ../img/catalog/tablet2-garmin-marq@2x.png 2x
+                    ./img/catalog/tablet2-garmin-marq.png 1x,
+                    ./img/catalog/tablet2-garmin-marq@2x.png 2x
                   "
-                  media="(min-width:1px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
-                  ../img/catalog/mob2-garmin-marq.png 1x,
-                  ../img/catalog/mob2-garmin-marq@2x.png 2x
+                  ./img/catalog/mob2-garmin-marq.png 1x,
+                  ./img/catalog/mob2-garmin-marq@2x.png 2x
                   "
-                  media="(min-width:768px)"
+                  media="(max-width: 767px)"
                 />
                 <img
-                  src="../img/catalog/mob2-garmin-marq.png"
+                  src="./img/catalog/mob2-garmin-marq.png"
                   alt="Garmin marq"
                   class="catalog-photo"
                 />
               </picture>
+              <div class="catalog-item-name-price">
+              <p class="catalog-item-name">Garmin Marq Athlete</p>
+              <p class="catalog-item-price">€450</p>
+            </div>
             </div>
         </li>
         <li class="catalog-item-img">
-          <div>
+          <div class="catalog-item-img-block">
             <picture>                
                 <source
                   srcset="
-                    ../img/catalog/tablet3-garmin-descent.png 1x,
-                    ../img/catalog/tablet3-garmin-descent@2x.png 2x
+                    ./img/catalog/tablet3-garmin-descent.png 1x,
+                    ./img/catalog/tablet3-garmin-descent@2x.png 2x
                   "
-                  media="(min-width:1px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
-                  ../img/catalog/mob3-garmin-descent.png 1x,
-                  ../img/catalog/mob3-garmin-descent@2x.png 2x
+                  ./img/catalog/mob3-garmin-descent.png 1x,
+                  ./img/catalog/mob3-garmin-descent@2x.png 2x
                   "
-                  media="(min-width:768px)"
+                  media="(max-width: 767px)"
                 />
                 <img
-                  src="../img/catalog/mob3-garmin-descent.png"
+                  src="./img/catalog/mob3-garmin-descent.png"
                   alt="Garmin descent"
                   class="catalog-photo"
                 />
               </picture>
+              <div class="catalog-item-name-price">
+              <p class="catalog-item-name">Garmin Descent MK1</p>
+              <p class="catalog-item-price">€680</p>
+              </div>
             </div>
-
         </li>
         <li class="catalog-item-img">
-          <div>
+          <div class="catalog-item-img-block">
             <picture>                
                 <source
                   srcset="
-                    ../img/catalog/tablet4-garmin-delta@2x.png 1x,
-                    ../img/catalog/tablet4-garmin-delta@2x.png 2x
+                    ./img/catalog/tablet4-garmin-delta@2x.png 1x,
+                    ./img/catalog/tablet4-garmin-delta@2x.png 2x
                   "
-                  media="(min-width:1px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
-                  ../img/catalog/mob4-garmin-delta.png 1x,
-                  ../img/catalog/mob4-garmin-delta@2x.png 2x
+                  ./img/catalog/mob4-garmin-delta.png 1x,
+                  ./img/catalog/mob4-garmin-delta@2x.png 2x
                   "
-                  media="(min-width:768px)"
+                  media="(max-width: 767px)"
                 />
                 <img
-                  src="../img/catalog/mob4-garmin-delta.png"
+                  src="./img/catalog/mob4-garmin-delta.png"
                   alt="Garmin delta"
                   class="catalog-photo"
                 />
               </picture>
+              <div class="catalog-item-name-price">
+              <p class="catalog-item-name">Garmin D2 Delta PX</p>
+              <p class="catalog-item-price">€380</p>
+              </div>
             </div>
         </li>
         <li class="catalog-item-img catalog-item-img-wrap">
-            <div>
+          <div class="catalog-item-img-block">
             <picture>                
                 <source
                   srcset="
-                    ../img/catalog/tablet5-garmin-6pro.png 1x,
-                    ../img/catalog/tablet5-garmin-6pro@2x.png 2x
+                    ./img/catalog/tablet5-garmin-6pro.png 1x,
+                    ./img/catalog/tablet5-garmin-6pro@2x.png 2x
                   "
-                  media="(min-width:1px)"
-                />
-                <source
-                  srcset="
-                  ../img/catalog/mob5-garmin-6pro.png 1x,
-                  ../img/catalog/mob5-garmin-6pro@2x.png 2x
-                  "
-                  media="(min-width:768px)"
+                  media="(min-width: 768px)"
                 />
                 <img
-                  src="../img/catalog/mob5-garmin-6pro.png"
+                  src="./img/catalog/mob5-garmin-6pro.png"
                   alt="Garmin 6pro"
                   class="catalog-photo"
                 />
               </picture>
+              <div class="catalog-item-name-price">
+              <p class="catalog-item-name">Garmin Fenix 6 Pro Solar</p>
+              <p class="catalog-item-price">€400</p>
+              </div>
             </div>
         </li>
         <li class="catalog-item-img catalog-item-img-wrap">
-          <div>
+          <div class="catalog-item-img-block">
             <picture>                
                 <source
                   srcset="
-                    ../img/catalog/tablet6-tube-watch.png 1x,
-                    ../img/catalog/tablet6-tube-watch@2x.png 2x
+                    ./img/catalog/tablet6-tube-watch.png 1x,
+                    ./img/catalog/tablet6-tube-watch@2x.png 2x
                   "
-                  media="(min-width:1px)"
-                />
-                <source
-                  srcset="
-                  ../img/catalog/mob6-tube-watch.png 1x,
-                  ../img/catalog/mob6-tube-watch@2x.png 2x
-                  "
-                  media="(min-width:768px)"
+                  media="(min-width: 768px)"
                 />
                 <img
-                  src="../img/catalog/mob6-tube-watch.png"
+                  src="./img/catalog/mob6-tube-watch.png"
                   alt="Tube watch"
                   class="catalog-photo"
                 />
               </picture>
+              <div class="catalog-item-name-price">
+              <p class="catalog-item-name">Tube Watch S42 Date Steel With Black Case
+              </p>
+              <p class="catalog-item-price">€395</p>
+            </div>
             </div>
         </li>
     </ul>
-    <div>
-    <button class="catalog-btn" type="button">Show more</button>
-    </div>
+    <button class="catalog-btn" type="button">Show more</button>    
    </div>
-
-
-
 </section>
