--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,40 +1,60 @@
-.catalog {
-    /*max-width: 375px;
-    padding: 0px 20px;*/    
-}
-
 .catalog-btitle {
     font-weight: 600;
     font-size: 32px;
     line-height: 1;
     letter-spacing: -0.02em;
     color: #0c0c0c;
+    margin-bottom: 24px;
 }
-
 .catalog-title {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-width: 335px;
     height: 100%;
     margin-bottom: 0;
 }
-
-.catalog-item{    
-    }
-
+.catalog-item-img:hover { 
+    box-shadow: 
+    0 4px 4px 0 rgba(0, 0, 0, 0.25), 
+    0 4px 4px 0 rgba(0, 0, 0, 0.25), 
+    0 4px 4px 0 rgba(0, 0, 0, 0.25);   
+}
 .catalog-item-img {
     border: 1px solid rgba(12, 12, 12, 0.05);
     border-radius: 30px;
-    
-    height: 100%;
-    background: #f3f3f3;
+    max-width: 100%;
+    height: 362px;
+    background: #f3f3f3;    
 }
-
-.catalog-photo {
-    padding: 24px 28px;
+.catalog-photo {    
+    margin: 24px auto 10px auto; 
 }
-
+.catalog-item-name-price {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 8px;
+    max-width: 280px; 
+    height: 44px;    
+    margin: 0 28px 24px 28px;
+}
+.catalog-item-name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+    overflow: hidden;
+    width: 100%;
+}
+.catalog-item-price {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.28571;
+    letter-spacing: -0.02em;
+    color: rgba(12, 12, 12, 0.5);     
+}
 .catalog-btn {
     width: 160px;
     height: 48px;
@@ -49,7 +69,50 @@
     display: block;
     margin: 40px auto 0 auto;            
 }
-
+.catalog-btn:hover {
+    background: #1f3cd4;
+}
 .catalog-item-img-wrap {
     display: none;
+}
+@media only screen and (min-width: 768px) {
+    .catalog-btitle {
+        font-size: 48px;
+        line-height: 0.91667;
+        margin-bottom: 40px;
+    }
+    .catalog-title {
+        flex-direction: row;
+        flex-wrap: wrap;
+        row-gap: 32px;
+        column-gap: 16px;
+    }
+    .catalog-item-img {
+        height: 412px;        
+        width: calc((100% - 20px) / 2);
+    }
+    .catalog-item-img-wrap {
+        display: list-item;
+    }
+    .catalog-item-name-price {
+       margin: 0 32px 24px 32px;
+    }
+    .catalog-item-name {
+        font-size: 20px;
+        line-height: 1;
+    }
+    .catalog-btn {
+        display: none;
+    }
+}
+@media only screen and (min-width: 1280px) {
+    .catalog-title {        
+        column-gap: 23px;
+    }
+    .catalog-item-img {
+        width: calc((100% - 52px) / 3);
+    }
+    .catalog-item-name-price {
+        max-width: 304px;
+    }
 }
