--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -94,7 +94,7 @@
             <picture>                
                 <source
                   srcset="
-                    ./img/catalog/tablet4-garmin-delta@2x.png 1x,
+                    ./img/catalog/tablet4-garmin-delta.png 1x,
                     ./img/catalog/tablet4-garmin-delta@2x.png 2x
                   "
                   media="(min-width: 768px)"
