--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -14,6 +14,7 @@
     margin-bottom: 0;
 }
 .catalog-item-img:hover { 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 
     0 4px 4px 0 rgba(0, 0, 0, 0.25), 
     0 4px 4px 0 rgba(0, 0, 0, 0.25), 
