--- a/src/partials/advert.html
+++ b/src/partials/advert.html
@@ -1,11 +1,13 @@
 <section class="advertisement">
-<div class="container advertisement-container">
+<div class="container">
+<div class="advertisement-container">
 <h2 class="advertisement-title visually-hidden">Advertisement</h2>
 <div class="advert-div">
 <p class="advert-text">Choose <span class="advert-part">your story</span>, making every moment unique. Time is your style, and we reveal it.</p>
 <a class="advert-link" href="#contact-us">
 Contact Us
 </a>
+</div>
 </div>
 </div>
 </section>
