--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
     <nav class="header-navigation">
       <ul class="header-nav-list">
         <li class="header-nav-item">
-          <a href="#home" class="header-nav-active header-nav-a">Home</a>
+          <a href="#home" class="header-nav-a">Home</a>
         </li>
         <li class="header-nav-item">
           <a href="#about" class="header-nav-a">About Us</a>
