--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -7,9 +7,7 @@
     </button>
     <ul class="menu-nav-list">
       <li class="menu-nav-item">
-        <a href="#home" class="menu-nav-active menu-nav-a" onclick="closeNav()"
-          >Home</a
-        >
+        <a href="#home" class="menu-nav-active menu-nav-a">Home</a>
       </li>
       <li class="menu-nav-item">
         <a href="#about" class="menu-nav-a">About Us</a>
