--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -15,8 +15,8 @@
           <h3 class="reviews-list-fullname">John Wax</h3>
           <p class="reviews-text">
             Buying a watch from was the best choice for me. The design is
-            perfectly combined with high quality materials. The strap fits nicely
-            on the hand, and the mechanism works flawlessly.
+            perfectly combined with high quality materials. The strap fits
+            nicely on the hand, and the mechanism works flawlessly.
           </p>
         </li>
         <li class="reviews-item swiper-slide">
@@ -31,8 +31,8 @@
           <h3 class="reviews-list-fullname">Victoria Romashenko</h3>
           <p class="reviews-text">
             Can't take my eyes off my watch from. Every time I put it on, it is
-            admired by those around me. The build quality and attention to detail
-            make it a real gem among my accessories.
+            admired by those around me. The build quality and attention to
+            detail make it a real gem among my accessories.
           </p>
         </li>
         <li class="reviews-item swiper-slide">
@@ -63,8 +63,8 @@
           <h3 class="reviews-list-fullname">John Wax</h3>
           <p class="reviews-text">
             Buying a watch from was the best choice for me. The design is
-            perfectly combined with high quality materials. The strap fits nicely
-            on the hand, and the mechanism works flawlessly.
+            perfectly combined with high quality materials. The strap fits
+            nicely on the hand, and the mechanism works flawlessly.
           </p>
         </li>
         <li class="reviews-item swiper-slide">
@@ -79,8 +79,8 @@
           <h3 class="reviews-list-fullname">Victoria Romashenko</h3>
           <p class="reviews-text">
             Can't take my eyes off my watch from. Every time I put it on, it is
-            admired by those around me. The build quality and attention to detail
-            make it a real gem among my accessories.
+            admired by those around me. The build quality and attention to
+            detail make it a real gem among my accessories.
           </p>
         </li>
         <li class="reviews-item swiper-slide">
