--- a/src/css/header.css
+++ b/src/css/header.css
@@ -93,7 +93,7 @@
   text-shadow: 0px 0px 5px white, 0px 0px 7px white, 0px 0px 8px white,
     0px 0px 10px white, 0px 0px 6px white;
 }
-.header-nav-active::after {
+.header-nav-a::after {
   position: absolute;
   content: '';
   width: 8px;
@@ -102,6 +102,12 @@
   left: 40%;
   border-radius: 4px;
   background-color: #3350e9;
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+}
+
+.header-nav-a.active::after {
+  opacity: 1;
 }
 .header-social {
   display: none;
