--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -18,6 +18,7 @@
   width: 100%;
   height: 100%;
   z-index: 100;
+  overflow-y: auto;
 }
 @media (min-width: 1280px) {
   .backdrop,
@@ -34,18 +35,26 @@
   height: 100%;
   margin: auto;
   transform: translate(0%, -50%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: black;
   background-image: url(/img/menu/tablet-menu-background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+  padding-bottom: 40px;
+  padding-top: 40px;
+  overflow-y: auto;
 }
 
 @media (min-width: 768px) {
   .menu-mobile {
     width: 330px;
+    padding-bottom: 50px;
+    padding-top: 50px;
   }
 }
 
@@ -70,12 +79,9 @@
   }
 }
 .menu-nav-list {
-  position: absolute;
-  top: 40%;
-  margin: 0;
+  margin-bottom: auto;
+  margin-top: auto;
   display: flex;
-  left: 50%;
-  transform: translate(-50%, -50%);
   flex-direction: column;
   gap: 24px;
 }
@@ -85,11 +91,10 @@
 .menu-nav-a {
   color: #fbfbfb;
   position: relative;
+  padding-bottom: 0;
+  transition: padding-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-nav-item:first-child {
-  padding-bottom: 12px;
-}
-.menu-nav-active::after {
+.menu-nav-a::after {
   position: absolute;
   content: '';
   width: 8px;
@@ -98,12 +103,14 @@
   left: 40%;
   border-radius: 4px;
   background-color: #3350e9;
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+}
+
+.menu-nav-a.active::after {
+  opacity: 1;
 }
 .menu-social {
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translate(-50%, 0%);
   display: flex;
   gap: 10px;
 }
