--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about-section">
+<section class="about-section" id="about">
   <div class="container about-container">
     <div class="about-content">
       <h2 class="about-title">About Us</h2>
