--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero-section">
+<section class="hero-section" id="home">
       <div class="container hero-container">
         <div class="hero-container-tablet">
           <div class="hero-container-text">
