--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -100,7 +100,7 @@
           </ul>
         </div>
         <div class="sale-container-watch">
-          <picture>
+          <picture class="sale-pic">
             <source
               srcset="
                 ./img/sale/tablet-watch-garmin-marq.png    1x,
