--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -9,6 +9,7 @@
         </p>
         <form class="contact-form">
           <input
+            aria-label="user-name"
             class="contact-form-input"
             type="text"
             name="user-name"
@@ -17,6 +18,7 @@
             required
           />
           <input
+            aria-label="user-email"
             class="contact-form-input"
             type="email"
             name="user-email"
@@ -24,6 +26,7 @@
             required
           />
           <input
+            aria-label="user-phone"
             class="contact-form-input"
             type="tel"
             name="user-phone"
@@ -32,6 +35,7 @@
             required
           />
           <textarea
+            aria-label="user-comments"
             class="contact-form-input contact-form-comment"
             name="user-comments"
             placeholder="Comment"
