--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -42,17 +42,17 @@
           </li>
         </ul>
       </div>
-      <div class="footer-tel">
+      <address class="footer-tel">
         <a href="tel:+380684439426" class="footer-tel-text"
           >+380 (68) 443-94-26</a
         >
-      </div>
+      </address>
 
       <p class="footer-tagline">
         Have the time of your life with our watches: where high-class
         craftsmanship meets impeccable design
       </p>
-      <div class="footer-anchors-address">
+      <nav class="footer-anchors-address">
         <ul class="footer-anchors-list">
           <li>
             <a href="#home">Home</a>
@@ -77,7 +77,7 @@
         <address class="footer-address">
           1678 S. Pioneer Road Salt Lake City UT 84104
         </address>
-      </div>
+      </nav>
       <div class="footer-text-privacy">
         <p class="footer-text">©2023 The Watch Spot. All rights reserved.</p>
         <div class="footer-service">
