--- a/src/partials/advert.html
+++ b/src/partials/advert.html
@@ -7,7 +7,7 @@
           Choose <span class="advert-part">your story</span>, making every
           moment unique. Time is your style, and we reveal it.
         </p>
-        <a class="advert-link" href="#contact"> Contact Us </a>
+        <a class="advert-link" href="#cont"> Contact Us </a>
       </div>
     </div>
   </div>
