--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer id="footer">
   <div class="container container-footer-size">
     <div class="footer-container">
       <div class="footer-socials-blok">
