--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -42,7 +42,7 @@
           />
       </picture>    
         
-        <a class="hero-scroll" href="#about">Scroll down</a>
+        <a class="hero-scroll" href="#footer">Scroll down</a>
    
       </div>
     </div>
