--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -70,7 +70,7 @@
             <a href="#reviews">Reviews</a>
           </li>
           <li>
-            <a href="#contact">Contact Us</a>
+            <a href="#cont">Contact Us</a>
           </li>
         </ul>
 
