--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
           <a href="#reviews" class="header-nav-a">Reviews</a>
         </li>
         <li class="header-nav-item">
-          <a href="#contact" class="header-nav-a">Contact Us</a>
+          <a href="#cont" class="header-nav-a">Contact Us</a>
         </li>
       </ul>
     </nav>
