--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -22,7 +22,7 @@
         <a href="#reviews" class="menu-nav-a">Reviews</a>
       </li>
       <li class="menu-nav-item">
-        <a href="#contact" class="menu-nav-a">Contact Us</a>
+        <a href="#cont" class="menu-nav-a">Contact Us</a>
       </li>
     </ul>
     <ul class="menu-social">
