--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -31,7 +31,7 @@
             type="tel"
             name="user-phone"
             placeholder="+380"
-            pattern="[0-9]+"
+            pattern="[+][0-9]{12}"
             required
           />
           <textarea
@@ -53,15 +53,15 @@
         />
         <source
           srcset="
-            ./img/contact/tablet-contact-watch.jpg    1x,
-            ./img/contact/tablet-contact-watch@2x.jpg 2x
+            ./img/contact/tablet-contact-watch.jpg     1x,
+            ./img/contact/tablet-contact-watch@2x.avif 2x
           "
           media="(min-width: 768px)"
         />
         <source
           srcset="
-            ./img/contact/mobile-contact-watch.jpg    1x,
-            ./img/contact/mobile-contact-watch@2x.jpg 2x
+            ./img/contact/mobile-contact-watch.jpg     1x,
+            ./img/contact/mobile-contact-watch@2x.avif 2x
           "
           media="(max-width: 767px)"
         />
