--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -56,15 +56,15 @@
         />
         <source
           srcset="
-            ./img/hero/tablet-hero/tablet-hero@1x.jpg 1x,
-            ./img/hero/tablet-hero/tablet-hero@2x.jpg 2x
+            ./img/hero/tablet-hero/tablet-hero@1x.jpg  1x,
+            ./img/hero/tablet-hero/tablet-hero@2x.avif 2x
           "
           media="(min-width: 768px)"
         />
         <source
           srcset="
-            ./img/hero/mobile-hero/mobile-hero@1x.jpg 1x,
-            ./img/hero/mobile-hero/mobile-hero@2x.jpg 2x
+            ./img/hero/mobile-hero/mobile-hero@1x.jpg  1x,
+            ./img/hero/mobile-hero/mobile-hero@2x.avif 2x
           "
           media="(max-width: 767px)"
         />
