--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -25,15 +25,15 @@
       />
       <source
         srcset="
-          ./img/about/tablet-about-watch.jpg    1x,
-          ./img/about/tablet-about-watch@2x.jpg 2x
+          ./img/about/tablet-about-watch.jpg     1x,
+          ./img/about/tablet-about-watch@2x.avif 2x
         "
         media="(min-width: 768px)"
       />
       <source
         srcset="
-          ./img/about/mobile-about-watch.jpg    1x,
-          ./img/about/mobile-about-watch@2x.jpg 2x
+          ./img/about/mobile-about-watch.jpg     1x,
+          ./img/about/mobile-about-watch@2x.avif 2x
         "
         media="(max-width: 375px)"
       />
